{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 41,
  "lineage": "b6000bf1-6e48-2d09-a19d-adc119454926",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092f2b942c103ec57",
            "arn": "arn:aws:ec2:ap-south-1:418606469932:elastic-ip/eipalloc-092f2b942c103ec57",
            "domain": "vpc",
            "id": "eipalloc-092f2b942c103ec57",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-110-14-157.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.14.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "shopsphere-nat-eip"
            },
            "tags_all": {
              "Name": "shopsphere-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:internet-gateway/igw-0b2b358146c911164",
            "id": "igw-0b2b358146c911164",
            "owner_id": "418606469932",
            "tags": {
              "Name": "shopsphere-igw"
            },
            "tags_all": {
              "Name": "shopsphere-igw"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092f2b942c103ec57",
            "association_id": "eipassoc-07d6f6683f422a521",
            "connectivity_type": "public",
            "id": "nat-0f3ed8b2de93096dc",
            "network_interface_id": "eni-0f90a47321a1062f8",
            "private_ip": "10.0.1.136",
            "public_ip": "3.110.14.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a410625f9d1514c",
            "tags": {
              "Name": "shopsphere-nat"
            },
            "tags_all": {
              "Name": "shopsphere-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:route-table/rtb-0d783958639d67be4",
            "id": "rtb-0d783958639d67be4",
            "owner_id": "418606469932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f3ed8b2de93096dc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopsphere-private-rt"
            },
            "tags_all": {
              "Name": "shopsphere-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:route-table/rtb-0e1eb5445fb4e3b6e",
            "id": "rtb-0e1eb5445fb4e3b6e",
            "owner_id": "418606469932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2b358146c911164",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopsphere-public-rt"
            },
            "tags_all": {
              "Name": "shopsphere-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3a5f2eec60ea25b",
            "route_table_id": "rtb-0d783958639d67be4",
            "subnet_id": "subnet-003adcaacfb9dfef9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a4fe952f4d4bbc3",
            "route_table_id": "rtb-0d783958639d67be4",
            "subnet_id": "subnet-06cd7d0e93708c55e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_app",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f671e5742a7b258",
            "route_table_id": "rtb-0e1eb5445fb4e3b6e",
            "subnet_id": "subnet-07a410625f9d1514c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848233c751ea686c",
            "route_table_id": "rtb-0e1eb5445fb4e3b6e",
            "subnet_id": "subnet-09c30df0a32524457"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-003adcaacfb9dfef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003adcaacfb9dfef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-private-app-1"
            },
            "tags_all": {
              "Name": "shopsphere-private-app-1"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-06cd7d0e93708c55e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cd7d0e93708c55e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-private-app-2"
            },
            "tags_all": {
              "Name": "shopsphere-private-app-2"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-07ad1af906d2c2de2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ad1af906d2c2de2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-private-db-1"
            },
            "tags_all": {
              "Name": "shopsphere-private-db-1"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-0692c49e177389ce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0692c49e177389ce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-private-db-2"
            },
            "tags_all": {
              "Name": "shopsphere-private-db-2"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-07a410625f9d1514c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a410625f9d1514c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-public-1"
            },
            "tags_all": {
              "Name": "shopsphere-public-1"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:subnet/subnet-09c30df0a32524457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c30df0a32524457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "418606469932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "shopsphere-public-2"
            },
            "tags_all": {
              "Name": "shopsphere-public-2"
            },
            "vpc_id": "vpc-0bf77c5ada168e829"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:418606469932:vpc/vpc-0bf77c5ada168e829",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05542b908220332bb",
            "default_route_table_id": "rtb-0ab5282ff458890da",
            "default_security_group_id": "sg-030ec758e73c3926a",
            "dhcp_options_id": "dopt-040f92b0c8fa2c5fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf77c5ada168e829",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab5282ff458890da",
            "owner_id": "418606469932",
            "tags": {
              "Name": "shopsphere-vpc"
            },
            "tags_all": {
              "Name": "shopsphere-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}